--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@astahmer/eslint-config-monorepo",
+  "name": "@lekinano/toolings",
   "private": true,
   "version": "0.1.0",
   "repository": {
