--- a/packages/prettier-config/core/package.json
+++ b/packages/prettier-config/core/package.json
@@ -8,28 +8,14 @@
   "author": "djang0.dev <djang0dev@tutanota.com>",
   "main": "index.cjs",
   "license": "ISC",
-  "dependencies": {
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "@typescript-eslint/parser": "^5.46.1",
-    "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
-    "eslint-plugin-only-error": "^1.0.2",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint-plugin-sonarjs": "^0.17.0",
-    "eslint-plugin-unicorn": "^45.0.2"
-  },
   "devDependencies": {
-    "eslint": "^8.25.0",
-    "prettier": "^2.7.1",
-    "typescript": "^4.8.3"
+    "prettier": "^2.8.1"
   },
   "peerDependencies": {
-    "eslint": "^8.25.0"
+    "prettier": "^2.8.1"
   },
   "files": [
-    "index.js"
+    "index.cjs"
   ],
   "publishConfig": {
     "access": "public"
