--- a/packages/eslint-config/typescript/package.json
+++ b/packages/eslint-config/typescript/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lekinano/eslint-config-ts",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "repository": {
     "type": "git",
     "url": "https://github.com/lekinano/toolings.git"
@@ -9,21 +9,21 @@
   "main": "index.cjs",
   "license": "ISC",
   "dependencies": {
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "@typescript-eslint/parser": "^5.46.1",
-    "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "@typescript-eslint/parser": "^6.7.4",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-only-error": "^1.0.2",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "eslint-plugin-sonarjs": "^0.17.0",
-    "eslint-plugin-unicorn": "^45.0.2"
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "eslint-plugin-sonarjs": "^0.21.0",
+    "eslint-plugin-unicorn": "^48.0.1"
   },
   "devDependencies": {
     "eslint": "^8.25.0",
-    "prettier": "^2.7.1",
-    "typescript": "^4.8.3"
+    "prettier": "^3.0.3"
   },
   "peerDependencies": {
     "eslint": "^8.25.0"
